[Update] New Sidebar

--- a/addons/web/static/src/webclient/home_menu/home_menu.scss
+++ b/addons/web/static/src/webclient/home_menu/home_menu.scss
@@ -63,6 +63,7 @@
             .i_app {
                 background: var(--AppSwitcherIcon-background, #{$o-home-menu-app-icon-background-color});
                 border-radius: $border-radius;
+                box-shadow: $box-shadow-sm;
 
                 &.i_focused {
                     background: $component-active-bg;
