--- a/addons/web/static/src/webclient/system_information/system_information.scss
+++ b/addons/web/static/src/webclient/system_information/system_information.scss
@@ -1,4 +1,5 @@
 .i_system_information {
     background: var(--AppSwitcherIcon-background, #{$o-home-menu-app-icon-background-color});
     border-radius: $border-radius;
+    box-shadow: $box-shadow-sm;
 }
