[Update] Form View 1

--- a/addons/web/static/src/views/fields/contact_image/contact_image_field.scss
+++ b/addons/web/static/src/views/fields/contact_image/contact_image_field.scss
@@ -1,7 +1,9 @@
 .o_field_contact_image {
     img {
-        width: 130px;
-        height: 130px;
+        // width: 130px;
+        // height: 130px;
+        width: 72px;
+        height: 72px;
         object-fit: contain;
     }
 }
