--- a/addons/web/static/src/webclient/websidebar/websidebar.scss
+++ b/addons/web/static/src/webclient/websidebar/websidebar.scss
@@ -1,10 +1,10 @@
 .o_web_client {
-    > .o_action_manager {
-        &:has(> .i_web_sidebar) {
+    &:has(.i_web_sidebar) {
+        > .o_action_manager {
             display: flex;
             // background: #{$o-white};
-            margin-left: map-get($spacers, 2);
-            margin-right: map-get($spacers, 2);
+            // margin-left: map-get($spacers, 2);
+            // margin-right: map-get($spacers, 2);
             
             & > {
             overflow: auto;
@@ -13,9 +13,14 @@
             & > *:last-child {
                 flex: 1 1 100%;
                 @extend %i-inphms-blur-background;
-                margin-left: map-get($spacers, 2);
-                border-radius: #{$border-radius-sm};
+                // margin-left: map-get($spacers, 2);
+                // border-radius: #{$border-radius-sm};
             }
+        }
+        .o_main_navbar {
+            background: $o-navbar-background;
+            backdrop-filter: none;
+            border-bottom: 1px solid #{$border-color} !important;
         }
     }
 }
@@ -24,8 +29,9 @@
     width: var(--SearchPanel-width, #{$o-search-panel-width});
     font-size: var(--SearchPanel-fontSize, #{$o-search-panel-font-size});
     @extend %i-scrollbar-style;
-    @extend %i-inphms-blur-background;
-    border-radius: #{$border-radius-sm};
+    // @extend %i-inphms-blur-background;
+    background: $o-white;
+    // border-radius: #{$border-radius-sm};
 
     .list-group {
         --list-group-bg: transparent;
