--- a/addons/web/static/src/webclient/navbar/navbar.variables.scss
+++ b/addons/web/static/src/webclient/navbar/navbar.variables.scss
@@ -6,9 +6,8 @@ $o-navbar-padding-v: 0px !default;
 $o-navbar-font-size: 0.8125rem !default;
 
 // $o-navbar-background: $o-brand-inphms !default;
-$o-navbar-background: $o-gray-800 !default;
-// $o-navbar-border-bottom: 1px solid darken($o-brand-inphms, 10%) !default;
-$o-navbar-border-bottom: 0 !default;
+$o-navbar-background: $o-white !default;
+$o-navbar-border-bottom: 1px solid darken($o-brand-inphms, 10%) !default;
 
 $o-navbar-entry-margin-h: 1px !default;
 $o-navbar-entry-padding-h: .63em !default;
