[Update] Form View Update 3

--- a/addons/web/static/src/core/dialog/dialog.scss
+++ b/addons/web/static/src/core/dialog/dialog.scss
@@ -52,7 +52,7 @@
 
     .modal-footer {
         text-align: left;
-        padding: map-get($spacers, 2);
+        // padding: map-get($spacers, 2);
 
         button {
             margin: 0; // Reset boostrap.
