--- a/inphms/addons/base/views/res_users_views.xml
+++ b/inphms/addons/base/views/res_users_views.xml
@@ -93,6 +93,7 @@
                 </form>
             </field>
         </record>
+        
         <!-- New Form -->
         <record id="view_users_form" model="ir.ui.view">
             <field name="name">res.users.form</field>
@@ -102,7 +103,7 @@
                     <header>
                     </header>
                     <sheet>
-                        <div class="oe_button_box" name="button_box">
+                        <!-- <div class="oe_button_box" name="button_box">
                             <button name="action_show_groups" type="object" groups="base.group_no_one" class="oe_stat_button" icon="fa-users order-first" help="Groups that apply to the current user">
                                 <field string="Groups" name="groups_count" widget="statinfo"/>
                             </button>
@@ -112,7 +113,7 @@
                             <button name="action_show_rules" type="object" groups="base.group_no_one" class="oe_stat_button" icon="fa-lock order-first">
                                 <field string="Record Rules" name="rules_count" widget="statinfo"/>
                             </button>
-                        </div>
+                        </div> -->
                         <widget name="web_ribbon" title="External user" bg_color="text-bg-warning" invisible="not share"/>
                         <widget name="web_ribbon" title="Archived" bg_color="text-bg-danger" invisible="active"/>
                         <div class="alert alert-info text-center o_form_header"
@@ -223,7 +224,7 @@
                                             </span>
                                         </div>
                                         <div class="w-md-50 w-lg-75 d-flex flex-column my-auto">
-                                            <field name="device_ids" mode="kanban" class="w-sm-75 w-md-100 w-lg-75 w-xl-50 o_base_devices_kanban_view"/>
+                                            <field name="device_ids" mode="kanban" class="w-sm-75 w-md-100 w-lg-75 o_base_devices_kanban_view"/>
                                             <div style="margin-top:5px;">
                                                 <button name="action_revoke_all_devices" type="object" string="Log out from all devices" class="btn btn-secondary h-100"/>
                                             </div>
@@ -244,9 +245,27 @@
                             </group>
                         </div>
                         <sidepanel>
-                            <group invisible="not name" class="border rounded mb-4 i__group">
-                                <field name="create_date" widget="date" options="{'show_time': false}"></field>
+                            <group string="Status" invisible="not name" class="border rounded mb-4 i__group">
+                                <field name="company_type" string="Record Type" readonly="1" class="fw-bold"/>
+                                <field name="create_date" widget="date" options="{'show_time': false}" readonly="1" class="fw-bold"/>
+                                <field name="write_date" readonly="1" class="fw-bold"/>
                             </group>
+                            <div class="o_inner_group border rounded mb-4 i__group" name="quick_actions">
+                                <div class="o_horizontal_separator mt-4 mb-3 text-uppercase fw-bolder small">
+                                    Quick Actions
+                                </div>
+                                <div class="action_button o-form-buttonbox list-group gap-2">
+                                    <button name="action_show_groups" type="object" groups="base.group_no_one" class="oe_stat_button btn-outline-secondary rounded" icon="fa-users order-first" help="Groups that apply to the current user">
+                                        <field string="Groups" name="groups_count" widget="statinfo"/>
+                                    </button>
+                                    <button name="action_show_accesses" type="object" groups="base.group_no_one" class="oe_stat_button btn-outline-secondary rounded" icon="fa-lock order-first">
+                                        <field string="Access Rights" name="accesses_count" widget="statinfo"/>
+                                    </button>
+                                    <button name="action_show_rules" type="object" groups="base.group_no_one" class="oe_stat_button btn-outline-secondary rounded" icon="fa-lock order-first">
+                                        <field string="Record Rules" name="rules_count" widget="statinfo"/>
+                                    </button>
+                                </div>
+                            </div>
                         </sidepanel>
                         <!-- <notebook colspan="4">
                             <page name="general_information" string="General Information">
@@ -561,10 +580,101 @@
                 <form string="Users" edit="1">
                     <sheet>
                         <widget name="notification_alert"/>
-                        <div class="d-flex align-items-center flex-wrap gap-2">
+                        <group class="i_group">
+                            <div class="p-4 d-flex flex-column gap-3 text-center">
+                                <field name="image_1920" widget="contact_image" options="{'preview_image': 'avatar_128', 'img_class':'rounded-pill'}"/>
+                                <field name="avatar_128" invisible="1"/> <!-- Needed in contact_image widget -->
+                                <div>
+                                    <field name="name" class="fw-bold" readonly="1"/>
+                                    <div class="badge text-muted" invisible="share">Internal Users</div>
+                                    <div class="badge text-muted" invisible="not share">Portal Users</div>
+                                </div>
+                            </div>
+                            <notebook>
+                                <page string="Preferences" name="preferences_page">
+                                    <group>
+                                        <group>
+                                            
+                                            <field name="name"/>
+                                            <label for="email"/>
+                                            <div name="h5_email">
+                                                <field name="email" placeholder="Email" class=""/>
+                                            </div>
+                                            <label for="phone"/>
+                                            <div name="h5_phone">
+                                                <field name="phone" placeholder="Phone" class=""/>
+                                            </div>
+                                            
+                                            <label for="lang"/>
+                                            <div class="o_row">
+                                                <field name="lang" required="1" readonly="0"/>
+                                                <button type="action" name="44" class="oe_edit_only btn-sm btn-link mb4 fa fa-globe" aria-label="Add a language" groups="base.group_system" title="Add a language"/>
+                                            </div>
+                                            <field name="signature" readonly="0" options="{'codeview': true, 'height': 112, 'resizable': true}" class="border border-secondary"/>
+                                        </group>
+                                        <!-- This group is meant to be used in overrides -->
+                                        <group name="other_preferences">
+                                            
+                                        </group>
+                                    </group>
+                                </page>
+                                <page name="calendar" string="Calendar">
+                                    <group>
+                                        <group name="calendar_preferences">
+                                            <field name="tz" widget="timezone_mismatch" options="{'tz_offset_field': 'tz_offset'}" readonly="0"/>
+                                            <field name="tz_offset" invisible="1"/> <!-- needed for the timezone_mismatch widget -->
+                                        </group>
+                                        <!-- This group is meant to be used in overrides -->
+                                        <group name="other_calendar_preferences"/>
+                                    </group>
+                                </page>
+                                <page string="Security" name="page_security">
+                                    <div name="auth" class="d-flex">
+                                        <div class="col-7 col-sm-6 col-lg-3 d-flex flex-column">
+                                            <span class="o_form_label">
+                                                Change Password
+                                            </span>
+                                            <span class="text-muted">
+                                                Update if compromised.
+                                            </span>
+                                        </div>
+                                        <button name="preference_change_password" type="object" string="Change password" class="btn btn-secondary h-100 my-auto"/>
+                                    </div>
+                                    <div name="api_keys" class="d-lg-flex mt-3">
+                                        <div class="col-lg-3 d-flex flex-column">
+                                            <label for="api_key_wizard" string="API Keys" class="o_form_label"/>
+                                            <span class="text-muted">
+                                                Connect external services.
+                                            </span>
+                                        </div>
+                                        <div class="w-lg-75 d-flex flex-column my-auto">
+                                            <field name="api_key_ids" mode="kanban" invisible="not api_key_ids" class="w-lg-75 o_base_api_keys_kanban_view"/>
+                                            <div>
+                                                <button name="api_key_wizard" string="Add API Key" type="object" class="btn btn-secondary h-100"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="d-lg-flex mt-3">
+                                        <div class="col-lg-3 d-flex flex-column">
+                                            <label for="action_revoke_all_devices" string="Devices" class="o_form_label"/>
+                                            <span class="text-muted">
+                                                Check if they are yours.
+                                            </span>
+                                        </div>
+                                        <div class="w-lg-75 d-flex flex-column my-auto">
+                                            <field name="device_ids" mode="kanban" class="w-lg-75 o_base_devices_kanban_view"/>
+                                            <div>
+                                                <button name="action_revoke_all_devices" type="object" string="Log out from all devices" class="btn btn-secondary h-100"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </page>
+                            </notebook>
+                        </group>
+                        <!-- <div class="d-flex align-items-center flex-wrap gap-2">
                             <div>
                                 <field name="image_1920" widget="contact_image" options="{'preview_image': 'avatar_128'}"/>
-                                <field name="avatar_128" invisible="1"/> <!-- Needed in contact_image widget -->
+                                <field name="avatar_128" invisible="1"/> Needed in contact_image widget
                             </div>
                             <div class="oe_title flex-fill d-flex flex-column gap-2">
                                 <div class="i_form_group w-md-50">
@@ -605,7 +715,7 @@
                                         </div>
                                         <field name="signature" readonly="0" options="{'codeview': true, 'height': 112, 'resizable': true}" class="border border-secondary" />
                                     </group>
-                                    <!-- This group is meant to be used in overrides -->
+                                    This group is meant to be used in overrides
                                     <group name="other_preferences">
                                         
                                     </group>
@@ -615,9 +725,9 @@
                                 <group>
                                     <group name="calendar_preferences">
                                         <field name="tz" widget="timezone_mismatch" options="{'tz_offset_field': 'tz_offset'}" readonly="0"/>
-                                        <field name="tz_offset" invisible="1"/> <!-- needed for the timezone_mismatch widget -->
+                                        <field name="tz_offset" invisible="1"/> needed for the timezone_mismatch widget
                                     </group>
-                                    <!-- This group is meant to be used in overrides -->
+                                    This group is meant to be used in overrides
                                     <group name="other_calendar_preferences"/>
                                 </group>
                             </page>
@@ -663,10 +773,13 @@
                                     </div>
                                 </div>
                             </page>
-                        </notebook>
+                        </notebook> -->
                         <footer>
-                            <button name="preference_save" type="object" string="Update Preferences" class="btn-primary" data-hotkey="q"/>
+                            <div class="smaller text-muted smaller text-muted me-md-auto w-sm-100 w-md-auto text-sm-center">
+                                Changes apply immediately to your account
+                            </div>
                             <button name="preference_cancel" string="Discard" special="cancel" data-hotkey="x" class="btn-secondary"/>
+                            <button name="preference_save" type="object" string="Update Preferences" class="btn-primary" data-hotkey="q"/>
                         </footer>
                     </sheet>
                 </form>
